--- a/Sections/profile.tex
+++ b/Sections/profile.tex
@@ -1,8 +1,11 @@
-An aspiring Software Engineer specialising in Design Patterns and Object-Oriented Design, with experience in 
-full stack and full software lifecycle developement from requirements through to maintainance. Eager to learn, 
-and comfortable in a team as well as working from own initiative, and always looking for the elegant solution.
-Strengths include: \newline{} \newline{}
-\cvlistdoubleitem{Object Oriented Development}{Java SE \& EE }
-\cvlistdoubleitem{Design Patterns}{API Development}
-\cvlistdoubleitem{C++11}{Backend Development}
+An experienced software developer specialising in Design Patterns, OOP and with
+a special love of meta-programming and compile time constructs. Always eager to
+learn with a drive to produce clean elegant code, and strong dislike of manual
+tasks that could be more easily be done by a machine.
+
+Strengths include:
+\newline{} \newline{}
+\cvlistdoubleitem{Object Oriented Design}{Design Patterns}
+\cvlistdoubleitem{C++ 17/20}             {Template Meta Programming}
+\cvlistdoubleitem{Devops}                {Containers}
 
