--- a/Sections/techSkills.tex
+++ b/Sections/techSkills.tex
@@ -1,10 +1,8 @@
-\cvitem{Languages}{Java(4yrs), C++(3yrs), Javascript(3yrs), PHP(3yrs)}
-\cvitem{Scripting}{Bash(4yrs), Python(1yr), Ruby(minor exposure)}
-\cvitem{Markup}{HTML/CSS, XML, JSON, {\LaTeX}, Markdown }
-\cvitem{O/S}{Linux(Arch, Debian/Ubuntu, Centos/Fedora), Windows(7, Server2008, Server2012)}
-\cvitem{Databases}{MySQL, MariaDB}
-\cvitem{Tools}{Eclipse+plugins, CodeBlocks, VIm, Doxygen, Git, Cucumber, Gradle, CMake, NMap, Wireshark}
-\cvitem{Methodologies}{Object Oriented Programming/Design, Design Patterns(GOF), TDD, SCRUM}
-\cvitem{Middleware}{Apache, Tomcat, MySQLd, Wordpress, Webmin, PHPMyAdmin}
-\cvitem{API}{J2SE(NET, Concurrency, JDBC), J2EE(Servlet, Mail, SAAJ, OSGi, XML, JSON), Jetty, eBay, C3P0, JUnit, Selenium, JQuery, Bootstrap, Android, BOOST, STL}
+\cvitem{Languages}{C++(8yrs), Java(4yrs), Javascript(3yrs)}
+\cvitem{Scripting}{Bash(7yrs), Python(6yr), Lua(minor exposure)}
+\cvitem{Libraries}{BOOST, STL, googletest, fmt, Fix8, fastAPI, docopt}
+\cvitem{Tools}{VIm/NeoVIm, Doxygen, Git, CMake/make, Conan, Ninja}
+\cvitem{DevOps}{Docker/PodMan, Gitlab-CI, Nomad, Consul}
+\cvitem{O/S}{CentOS/Rocky, Alpine, Arch, Debian/Ubuntu)}
+\cvitem{Markup}{JSON/YaML/ToML, HCL, XML/JSON, {\LaTeX}, Markdown, HTML/CSS}
 
