--- a/Sections/experience.tex
+++ b/Sections/experience.tex
@@ -1,16 +1,64 @@
 \cventry
-{Sep 2017 -- Present}
-{C++ Developer}
+{Dec 2024 -- Present}
+{Senior C++ Developer}
+{IG Group}
+{City of London}
+{OTC Pricing}
+{
+    Switched teams to OTC Pricing after a company wide decision to centralise
+    Market Making in Krakow. I am now working with a much more expansive estate
+    at the heart of IG's core pricing functionality.
+    \newline{}
+    \textbf{Achievements:}{
+	    \begin{itemize}
+		    \item{
+                Led the adoption of Podman, Nomad and Consul within the department
+                and the switch from bare metal deployments to orchestration and
+                containers.
+            }
+	    \end{itemize}
+    }
+    \textbf{Technologies:}{
+        \scriptsize 
+            C++17/20, CMake, Conan, Bash, Python, Podman, Nomad, Consul, Gitlab,
+            RSSL, Invision
+        \newline{} 
+    }
+}
+
+\cventry
+{Sep 2017 -- Dec 2024}
+{Senior C++ Developer}
 {IG Group}
 {City of London}
 {Market Making Technology}
-{New Graduate and part of the market making technology department, using C++11 to write innovative solutions to problems in a low latency, highly concurrent space. \newline{}
-\textbf{Achievements:}
-	{\begin{itemize}
-		\item{...}
-		\item{...}
-	\end{itemize}}
-\textbf{Technologies:} {\scriptsize C++11, Git, CMake, Doxygen, Bash, Python, Design Patterns, Backend Development, Financial Pricing, Invision, Docker\newline{} }
+{
+    Joined the Market Making team initially as a graduate, using C++ 14/17/20 to
+    write Market Making applications and integrate them into IG's on-prem exchange
+    over FIX with prices distributed over InVision.
+    \newline{}
+    \textbf{Achievements:}{
+	    \begin{itemize}
+		    \item{
+                Implemented a novel approach to manipulating underlying and
+                instrument level datasets using compile time type lists.
+            }
+		    \item{
+                Implemented FIX based price feeds which take in prices from
+                external parties and distribute them over TREP infrastructure
+            }
+            \item{
+                Drove automated documentation generation and CI/CD adoption
+                within the team.
+            }
+	    \end{itemize}
+    }
+    \textbf{Technologies:}{
+        \scriptsize 
+            C++14/17/20, CMake, Conan, Bash, Python, Gitlab, Invision, FIX, Doxygen,
+            MDBook
+        \newline{} 
+    }
 }
 
 \cventry
@@ -18,15 +66,32 @@
 {Software Engineering Intern}
 {Tomo Motor Parts Ltd}
 {Uxbridge}
-{12 month placement}
-{Solely responsible for designing, implementing and maintaining a new system, written in Java and using design patterns and object oriented design, to integrate with eBay, Royal Mail and an in-house DMS to manage invoicing and shipping of eBay orders. I also undertook a variety of other tasks as needed.\newline{}
-\textbf{Achievements:}
-	{\begin{itemize}
-		\item{Integrated with in house C++ DMS over sockets using its custom protocol to create invoices.}
-		\item{Integration with eBay through API.}
-		\item{Around 15,000 lines of code over the course of the project.}
-	\end{itemize}}
-\textbf{Technologies:} {\scriptsize Java, SQL, JDBC, Concurrency, Sockets, JavaMail, C3PO, Jetty9, Maven, Git, Doxygen, Log4Jv2, eBay SOAP API, Design Patterns(GOF), Object Oriented Design, Full Lifecycle Development, HTML, JavaScript, AJAX, Bootstrap, JQuery\newline{} }
+{12 month placement}{
+    Responsible for designing, implementing and maintaining a new system to
+    integrate with eBay, Royal Mail and an in-house DMS to manage invoicing and
+    shipping of eBay orders. I also undertook a variety of other tasks as needed.
+    \newline{}
+    \textbf{Achievements:}{
+        \begin{itemize}
+		    \item{
+                Integrated with in house C++ DMS over raw sockets by implementing
+                its custom binary protocol to create invoices.
+            }
+            \item{
+                Integration with Ebay and Royal Mail through their public API's
+            }
+		    \item{
+                At the time of implementation, it was calculated that the work i
+                did saved the company \pounds22,000/yr
+            }
+        \end{itemize}
+    }
+    \textbf{Technologies:}{
+        \scriptsize 
+                Java, SQL, JDBC, Sockets, JavaMail, C3PO, Jetty9, Doxygen, 
+                HTML/CSS/JS, Bootstrap, JQuery
+        \newline{} 
+    }
 }
 
 
@@ -35,28 +100,63 @@
 {Software Engineering Intern}
 {BeSeen Marketing Ltd}
 {Beaconsfield}
-{Summer Internship}
-{A part time summer internship using Java in conjunction with Jetty and Selenium to create a functional web testing platform compatible with BrowserStack.\newline{}
-\textbf{Achievements:}
-	{\begin{itemize}
-		\item{Solely responsible for the design and implementation of this project.}
-	\end{itemize}}
-\textbf{Technologies:} {\scriptsize Java, JDBC, Concurrency, Selenium, Jetty9, Maven, Git, Doxygen, Log4Jv2, Design Patterns(GOF), Object Oriented Design, Full Lifecycle Development, HTML, JavaScript, AJAX, Bootstrap, JQuery\newline{} }}
+{Summer Internship}{
+    A summer internship using Java in conjunction with Jetty and Selenium to 
+    create a functional web testing platform compatible with BrowserStack.
+    \newline{}
+    \textbf{Achievements:}{
+        \begin{itemize}
+		    \item{
+                Solely responsible for the design and implementation of this
+                project.
+            }
+	    \end{itemize}
+    }
+    \textbf{Technologies:}{
+        \scriptsize
+            Java, JDBC, Selenium, Jetty9, Maven, Doxygen,Log4Jv2, HTML/JS/CSS,
+            Bootstrap, JQuery
+        \newline{} 
+    }
+}
 
 \cventry
 {Jun 2015 -- Jul 2015}
 {DevOps Engineer}
 {Brunel University}
 {Uxbridge}
-{Summer Internship}
-{A 5 week internship where I was involved in migrating a webapp called MathsEG from a server in leeds to a local server at Brunel University. \newline{}
-\textbf{Achievements:}
-	{\begin{itemize}
-		\item{Setup and maintained MySQL and Tomcat Servers on Windows Server 2012.}
-		\item{Used Javascript, JQuery and MathML to add questions to Maths E.G. webapp.}
-	\end{itemize}}
-\textbf{Technologies:} {\scriptsize MYSQL, Tomcat, Windows Server 2012, JavaScript, JQuery, MathML\newline{} }
+{Summer Internship}{
+    A 5 week internship where I was involved in migrating a webapp
+    from a server in leeds to a local server at Brunel University. \newline{}
+    \textbf{Achievements:}{
+        \begin{itemize}
+		    \item{
+                Setup and maintained MySQL and Tomcat Servers on Windows Server
+                2012.
+            }
+		    \item{
+                Used Javascript, JQuery and MathML to add questions to Maths E.G.
+                webapp.
+            }
+	    \end{itemize}
+    }
+    \textbf{Technologies:}{
+        \scriptsize
+            MYSQL, Tomcat, Windows Server 2012, JavaScript, JQuery, MathML
+        \newline{}
+    }
 }
 
-\cventry{2005--2014}{Chef}{Various Restaurants/Hotels/Gastropubs}{Windsor and surrounding area}{Pastry/Garnish/General}{}
+\cventry
+{2004--2015}
+{Chef}
+{Various Restaurants/Hotels/Gastropubs}
+{Windsor area}
+{Pastry/Garnish/General}{
+    \textbf{Technologies:}{
+        \scriptsize 
+            Knives \& heat 
+        \newline{}
+    }
+}
 
