--- a/Sections/masthead.tex
+++ b/Sections/masthead.tex
@@ -1,13 +1,13 @@
 \firstname{Jan}
 \lastname{Hanson}
 \title{Software Engineer}
-\address{2 Lexington Apartments}{Slough SL2 5GQ}{UK}
+\address{London}{UK}
 \mobile{07796 311 906}
-\email{jpchansondev@gmail.com}
+\email{jpchanson@gmail.com}
 %\homepage{www.johndoe.com}
-\social[linkedin]{uk.linkedin.com/in/jpchanson}
-\social[github]{jpchansondev.github.com}
-\social[twitter]{@JanHansonDev}
+\social[linkedin]{jpchanson}
+\social[github]{jpchanson}
+%\social[twitter]{@JanHansonDev}
 \photo[85pt][0.4pt]{Resources/ProfilePic.jpg}
 %\extrainfo{additional information}
 %\quote{Some quote}
